--- a/PI2-LOJA-ROUP/src/main/java/Telas/telaProduto.form
+++ b/PI2-LOJA-ROUP/src/main/java/Telas/telaProduto.form
@@ -288,29 +288,27 @@
                               <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="txtQtd" min="-2" pref="136" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="88" max="-2" attributes="0"/>
                               <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="cbxTipo" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
-                              <Component id="btnAdiocionarItem" max="32767" attributes="0"/>
-                              <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="1" attributes="0">
                               <Group type="103" groupAlignment="1" attributes="0">
+                                  <Component id="btnAdiocionarItem" alignment="0" max="32767" attributes="0"/>
                                   <Group type="102" attributes="0">
+                                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                       <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="txtProduto" max="32767" attributes="0"/>
+                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                      <Component id="txtProduto" min="-2" pref="461" max="-2" attributes="0"/>
                                   </Group>
-                                  <Group type="102" alignment="1" attributes="0">
-                                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                          <Group type="102" attributes="0">
+                                  <Group type="102" attributes="0">
+                                      <Group type="103" groupAlignment="1" attributes="0">
+                                          <Group type="102" alignment="0" attributes="0">
                                               <Component id="lblCodigo" min="-2" max="-2" attributes="0"/>
-                                              <EmptySpace max="-2" attributes="0"/>
-                                              <Component id="txtCodigoProduto" max="32767" attributes="0"/>
+                                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                                              <Component id="txtCodigoProduto" min="-2" pref="131" max="-2" attributes="0"/>
                                           </Group>
                                           <Group type="102" attributes="0">
                                               <Component id="cbxTamanho" min="-2" max="-2" attributes="0"/>
@@ -318,14 +316,14 @@
                                               <Component id="cbxTamanho_" min="-2" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
-                                      <EmptySpace pref="41" max="32767" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Group type="102" alignment="1" attributes="0">
+                                      <EmptySpace max="32767" attributes="0"/>
+                                      <Group type="103" groupAlignment="1" attributes="0">
+                                          <Group type="102" attributes="0">
                                               <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
                                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                                              <Component id="cbxCor" min="-2" pref="200" max="-2" attributes="0"/>
+                                              <Component id="cbxCor" min="-2" pref="217" max="-2" attributes="0"/>
                                           </Group>
-                                          <Group type="102" alignment="1" attributes="0">
+                                          <Group type="102" attributes="0">
                                               <Component id="lblPreco" min="-2" max="-2" attributes="0"/>
                                               <EmptySpace type="separate" max="-2" attributes="0"/>
                                               <Component id="txtPreco" min="-2" pref="139" max="-2" attributes="0"/>
@@ -364,13 +362,13 @@
                           <Component id="txtProduto" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="cbxTipo" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="txtQtd" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
+                          <Component id="cbxTipo" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="btnAdiocionarItem" pref="51" max="32767" attributes="0"/>
@@ -405,7 +403,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="PRODUTO"/>
+                <Property name="text" type="java.lang.String" value="PRODUTO: "/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="cbxTamanho">
@@ -422,10 +420,10 @@
             <Component class="javax.swing.JComboBox" name="cbxTamanho_">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="19">
+                  <StringArray count="15">
                     <StringItem index="0" value="Selecione:"/>
-                    <StringItem index="1" value="P"/>
-                    <StringItem index="2" value="PP&#x9;"/>
+                    <StringItem index="1" value="PP"/>
+                    <StringItem index="2" value="P&#x9;"/>
                     <StringItem index="3" value="M&#x9;"/>
                     <StringItem index="4" value="G&#x9;"/>
                     <StringItem index="5" value="GG"/>
@@ -438,14 +436,14 @@
                     <StringItem index="12" value="48"/>
                     <StringItem index="13" value="50"/>
                     <StringItem index="14" value="52"/>
-                    <StringItem index="15" value="&#x9;"/>
-                    <StringItem index="16" value=" "/>
-                    <StringItem index="17" value=" "/>
-                    <StringItem index="18" value=" "/>
                   </StringArray>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbxTamanho_ActionPerformed"/>
+              </Events>
               <AuxValues>
+                <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="telaProduto_cbxTamanho_"/>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
             </Component>
@@ -474,7 +472,7 @@
             <Component class="javax.swing.JComboBox" name="cbxCor">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="11">
+                  <StringArray count="9">
                     <StringItem index="0" value="Selecione:"/>
                     <StringItem index="1" value="Amarelo"/>
                     <StringItem index="2" value="Azul"/>
@@ -484,8 +482,6 @@
                     <StringItem index="6" value="Rosa"/>
                     <StringItem index="7" value="Vermelho"/>
                     <StringItem index="8" value="Jeans"/>
-                    <StringItem index="9" value=" "/>
-                    <StringItem index="10" value=" "/>
                   </StringArray>
                 </Property>
               </Properties>
@@ -501,7 +497,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="*PRE&#xc7;O: (R$)"/>
+                <Property name="text" type="java.lang.String" value="*PRE&#xc7;O (R$): "/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="txtCodigoProduto">
@@ -530,7 +526,7 @@
             <Component class="javax.swing.JComboBox" name="cbxTipo">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="9">
+                  <StringArray count="7">
                     <StringItem index="0" value="Selecione:"/>
                     <StringItem index="1" value="Cal&#xe7;a"/>
                     <StringItem index="2" value="Camisa"/>
@@ -538,8 +534,6 @@
                     <StringItem index="4" value="Moletom"/>
                     <StringItem index="5" value="Blusa"/>
                     <StringItem index="6" value="Moda Intima"/>
-                    <StringItem index="7" value=" "/>
-                    <StringItem index="8" value=" "/>
                   </StringArray>
                 </Property>
               </Properties>
