--- a/PI2-LOJA-ROUP/src/main/java/Telas/telaCliente.form
+++ b/PI2-LOJA-ROUP/src/main/java/Telas/telaCliente.form
@@ -534,6 +534,9 @@
                   <Format format="###.###.###-##" subtype="-1" type="5"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tfCPFActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JFormattedTextField" name="tfDataNascimento">
               <Properties>
